Final del Portfolio, seguro luego hare detalles

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="/proyectos.html#conferencia" class="btn">Ver Mas</a>
                     <a href="https://www.youtube.com/watch?v=INVaEi8hjII&ab_channel=JoseLuisEspinola" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="/proyectos.html#pasteleria" class="btn">Ver Mas</a>
                     <a href="https://pasteleriaely.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>                
             </div>
@@ -216,14 +216,14 @@
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="/proyectos.html#peluqueria" class="btn">Ver Mas</a>
                     <a href="https://cursopeluqueria.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-img">
-                    <img src="/img/ubinetsa/ubinetsa1.jpg" alt="Proyecto4">
+                    <img src="/img/ubinetsa/ubinet1.jpg" alt="Proyecto4">
                 </div>
                 <div class="card-title">
                     <h3>Ubinet S.A.</h3>
@@ -238,7 +238,7 @@
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="/proyectos.html#ubinetsa" class="btn">Ver Mas</a>
                     <a href="https://ubinetsa.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                     </p>
                 </div>
                 <div class="card-btns">
-                    <a href="#" class="btn">Ver Mas</a>
+                    <a href="/proyectos.html#cuebanita" class="btn">Ver Mas</a>
                     <a href="https://tp-python-full-stack-front2024.netlify.app/" class="btn" target="_blank">Proyecto</a>
                 </div>
             </div>
@@ -270,7 +270,7 @@
         </div>
     </section>
 
-    <!----- FORMULARIO PARA SER PROXIMO ORADOR ------------>
+    <!----- FORMULARIO ----->
     <section id="section-form">
         <h2 class="titulo-form">FORMULARIO DE CONTACTO</h2>
         <!-- <form action="./php/enviar.php" method="post"> -->
@@ -287,7 +287,7 @@
         </form>
     </section>
 
-     <!-- Seccion de footer -->
+    <!-- Seccion de footer -->
     <footer id="piedepagina">
         <p class="contac">Contacto</p>
         <div class="container">
