--- a/proyectos.html
+++ b/proyectos.html
@@ -46,21 +46,21 @@
      <!-- Zona central de la primer pagina -->
      <section id="zona1">
         <div class="circle"></div>
-        <div class="img-proyectos">
+        <div class="presentacion">
             <h1>PROYECTOS</h1>
             <ol class="ol-proyectos">
-                <li class="li-proyectos"><a href="#conferencia">CONFERENCIA BS AS</a></li>
-                <li class="li-proyectos"><a href="#pasteleria">PASTELERIA ELY</a></li>
-                <li class="li-proyectos"><a href="#peluqueria">CURSO PELUQUERIA</a></li>
-                <li class="li-proyectos"><a href="#ubinetsa">UBINET S.A.</a></li>
-                <li class="li-proyectos"><a href="#cuebanita">CUEBANITA</a></li>
+                <li class="li-proyectos"><a href="#conferencia">Conferencia Bs As</a></li>
+                <li class="li-proyectos"><a href="#pasteleria">Pastelería Ely</a></li>
+                <li class="li-proyectos"><a href="#peluqueria">Curso de peluquería</a></li>
+                <li class="li-proyectos"><a href="#ubinetsa">Ubinet S.A.</a></li>
+                <li class="li-proyectos"><a href="#cuebanita">Cuebanita</a></li>
             </ol>
         </div>
     </section>
 
 
     <section class="contenedor container1" id="conferencia">
-        <h2>Proyecto CONFERENCIA BS AS</h2>
+        <h2>CONFERENCIA BS AS</h2>
         <div class="card-container1">
             <div class="card1">
                 <img src="/img/oradores/orador1.jpg" alt="">
@@ -118,7 +118,7 @@
     
         
     <section class="contenedor container2" id="pasteleria">
-        <h2>Proyecto PASTELERIA ELY</h2>
+        <h2>PASTELERIA ELY</h2>
         <div class="card-container2">
             <div class="card2">
                 <img src="/img/pasteleria/pasteleria1.jpg" alt="">
@@ -148,7 +148,7 @@
 
 
     <section class="contenedor container3" id="peluqueria">
-        <h2>Proyecto CURSO DE PELUQUERIA</h2>
+        <h2>CURSO DE PELUQUERIA</h2>
         <div class="card-container3">
             <div class="card3">
                 <img src="/img/peluqueria/peluqueria1.jpg" alt="">
@@ -176,7 +176,7 @@
 
 
     <section class="contenedor container4" id="ubinetsa">
-        <h2>Proyecto UBINET S.A.</h2>
+        <h2>UBINET S.A.</h2>
         <div class="card-container4">
             <div class="card4">
                 <img src="/img/ubinetsa/ubinet1.jpg" alt="">
@@ -206,7 +206,7 @@
 
 
     <section class="contenedor container5" id="cuebanita">
-        <h2>Proyecto CUEBANITA</h2>
+        <h2>CUEBANITA</h2>
         <div class="card-container5">
             <div class="card5">
                 <img src="/img/cuebanita/cuebanita1.jpg" alt="">
