Cambiando el porcentaje de la card, del 50 al 60

--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
                     <h3>Conferencia Bs As</h3>
                 </div>
                 <div class="card-description">
-                    <p>Conferencia Bs As, es un proyecto de Trabajo Integrador Final, presentado en CODO A CODO. 
-                       Se usaron las siguientes técnologias: HTML, CSS, JAVASCRIPT, BOOTSTRAP, MYSQL, bajo la IDE de INTELLIJ. 
-                       En dicha página podrás registrarte, loguearte, enviar un formulario de contacto, sacar un ticket, 
-                       consultar los ticket vendido, los oradores que se han inscripto y los usuarios registrados.
-                       La cursada fue en el segundo semestre del año 2023.-
+                    <p>Conferencia Bs As, es un proyecto de Trabajo Integrador Final, presentado en 
+                       CODO A CODO, donde se usaron las siguientes técnologias: HTML, CSS, JAVASCRIPT, 
+                       BOOTSTRAP, MYSQL, bajo la IDE de INTELLIJ. En dicha página podrás registrarte, 
+                       loguearte, enviar un formulario de contacto, sacar un ticket, consultar los 
+                       ticket vendido, los oradores que se han inscripto y los usuarios registrados. 
+                       La cursada fue en el tercer cuatrimestre del año 2023.-
                     </p>
                 </div>
                 <div class="card-btns">
@@ -183,7 +184,7 @@
                     <h3>Pasteleria Ely</h3>
                 </div>
                 <div class="card-description">
-                    <p>Pastelería Ely, es un proyecto que se encuentra funcionando. Se usaron 
+                    <p>Pastelería Ely, es un proyecto que se encuentra funcionando. Donde se usaron 
                        las siguientes técnologias: HTML, CSS, JAVASCRIPT, bajo la IDE de VISUAL 
                        STUDIO CODE. La página, proporciona un calculador repostero. Se basa 
                        en la pastelería de origen artesanal donde la pasión por la repostería 
@@ -253,12 +254,12 @@
                 <div class="card-description">
                     <p>CueBanita, es un proyecto de Trabajo Integrador Final, presentado en 
                        CODO A CODO. Se usaron las siguientes técnologias: HTML, CSS, JAVASCRIPT, 
-                       BOOTSTRAP, MYSQL, bajo la IDE de INTELLIJ. La página trata (como su nombre 
-                       lo dice), de un lugar donde se pueden ver películas gratis. En dicha web, 
-                       tendrás la posibilidad de registrarte, loguearte, y contactarte mediante un 
-                       formulario de contacto.
-                       Fecha de creación: Junio 2024.
-                       La cursada fue en el primer semestre del año 2024.-
+                       BOOTSTRAP, POSTGRESQL, bajo la IDE de VISUAL STUDIO CODE. La página trata 
+                       de un lugar donde se pueden ver películas gratis (tratando de parecerse a 
+                       la ya NO existente web CUEVANA). En dicha web, tendrás la posibilidad de 
+                       registrarte, loguearte, y contactarte mediante un formulario de contacto.
+                       Fecha de creación: Junio 2024. 
+                       La cursada fue en el primer cuatrimestre del año 2024.-
                     </p>
                 </div>
                 <div class="card-btns">
@@ -291,7 +292,10 @@
     <footer id="piedepagina">
         <p class="contac">Contacto</p>
         <div class="container">
-            <p class="mimail">jle36@hotmail.com - Cel. +54-3487-616158</p>
+            <p class="mimail">
+                <a href="mailto:tucorreo@example.com?subject=Consulta&body=Hola%2C%20quisiera%20más%20información%20sobre%20...">jle36@hotmail.com</a>
+            - Cel. +54-3487-616158</p>
+            </div>
             <ol class="social-links">
                 <li><a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" title="Ir a Linkedin" target="_blank">LinkedIn</a></li>
                 <li><a href="https://github.com/JoseLuisEspinola" title="Ir a GitHub" target="_blank">GitHub</a></li>
