Cambiando el porcentaje de la card, del 50 al 60

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                        las siguientes técnologias: HTML, CSS, JAVASCRIPT, bajo la IDE de VISUAL 
                        STUDIO CODE. La página, proporciona un calculador repostero. Se basa 
                        en la pastelería de origen artesanal donde la pasión por la repostería 
-                       cobra vida. Se mustran los deliciosos pasteles, desde brownies, cupcakes, 
+                       cobra vida. Se muestran los deliciosos pasteles, desde brownies, cupcakes, 
                        pastafloras rellenas, hasta pasteles de frutas irresistibles. Tambien puedes
-                       enviar un mail mediante un formulario, haciendo saber tus inquietudes.
+                       enviar un mail mediante un formulario de contacto, haciendo saber tus inquietudes.
                        Fecha de creación: Octubre 2023.-
                     </p>
                 </div>
