--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                 <div class="slide">
                     <img src="/img/visualfoxpro.png" alt="VISUAL FOXPRO 9">
                 </div>
+                <div class="slide">
+                    <img src="/img/microsoftoffice.png" alt="MICROSOFT OFFICE">
+                </div>
+                <div class="slide">
+                    <img src="/img/mixcraft8.jpeg" alt="MIXCRAFT">
+                </div>
 
                 <!-- repito las 11 imagenes anteriores -->
                 <div class="slide">
@@ -143,6 +149,12 @@
                 </div>
                 <div class="slide">
                     <img src="/img/visualfoxpro.png" alt="VISUAL FOXPRO 9">
+                </div>
+                <div class="slide">
+                    <img src="/img/microsoftoffice.png" alt="MICROSOFT OFFICE">
+                </div>
+                <div class="slide">
+                    <img src="/img/mixcraft8.jpeg" alt="MIXCRAFT">
                 </div>
             </div>
         </div>
