--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
     <!-- Zona central de la primer pagina -->
     <section id="zona1">
-        <div class="circle"></div>
         <div class="presentacion">
             <h1>La Programación</h1>
             <p class="renglon1">Un pilar fundamental en la</p>
@@ -64,7 +63,7 @@
                     conocimientos de diversos lenguajes de programación como Turbo Pascal, RmCobol y Visual FoxPro 9, este último 
                     del cual continúo manteniéndome actualizado en la actualidad.</p>
                 <p class="actualidad">Actualmente, me estoy especializando en el desarrollo web Full Stack, trabajando con 
-                    tecnologías como HTML, CSS, Bootstrap, JavaScript, Java, Python, C# y MySQL. Me encanta explorar nuevas herramientas 
+                    tecnologías como HTML, CSS, Bootstrap, JavaScript, Java, Python, C#, MySQL y Postgresql. Me encanta explorar nuevas herramientas 
                     y tecnologías para mejorar mis habilidades y ofrecer soluciones innovadoras a los desafíos de desarrollo web.</p>
                 <!-- <p><font face="Avengeance" size="10">ADVENGERS</font></p>  ejemplo para usar la letra de ADVENGERS -->
             </div>
