--- a/proyectos.html
+++ b/proyectos.html
@@ -144,8 +144,6 @@
     </section>
 
 
-
-
     <section class="contenedor container3" id="peluqueria">
         <h2>CURSO DE PELUQUERIA</h2>
         <div class="card-container3">
@@ -202,8 +200,6 @@
     </section>
 
 
-
-
     <section class="contenedor container5" id="cuebanita">
         <h2>CUEBANITA</h2>
         <div class="card-container5">
@@ -253,7 +249,9 @@
     <footer id="piedepagina">
         <p class="contac">Contacto</p>
         <div class="container">
-            <p class="mimail">jle36@hotmail.com - Cel. +54-3487-616158</p>
+            <p class="mimail">
+                <a href="mailto:tucorreo@example.com?subject=Consulta&body=Hola%2C%20quisiera%20más%20información%20sobre%20...">jle36@hotmail.com</a>
+                - Cel. +54-3487-616158</p>
             <ol class="social-links">
                 <li><a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" title="Ir a Linkedin" target="_blank">LinkedIn</a></li>
                 <li><a href="https://github.com/JoseLuisEspinola" title="Ir a GitHub" target="_blank">GitHub</a></li>
