--- a/index.html
+++ b/index.html
@@ -305,32 +305,26 @@
         <div class="container">
             <p class="mimail">
                 <a href="mailto:tucorreo@example.com?subject=Consulta&body=Hola%2C%20quisiera%20más%20información%20sobre%20...">jle36@hotmail.com</a>
-                - Cel. +54-3487-616158</p>
-            <!-- <ol class="social-links">
-                <li><a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" title="Ir a Linkedin" target="_blank">LinkedIn</a></li>
-                <li><a href="https://github.com/JoseLuisEspinola" title="Ir a GitHub" target="_blank">GitHub</a></li>
-                <li><a href="https://www.facebook.com/joseluis.espinola1" title="Ir a Facebook" target="_blank">Facebook</a></li>
-                <li><a href="https://cvjoseluisespinola.netlify.app/" title="Ver Curriculum Vitae" target="_blank">Ver CV</a></li>
-            </ol> -->
-
+                - Cel. +54-3487-616158
+            </p>
             <div class="sociales">
                 <a href="https://www.linkedin.com/in/jose-luis-espinola-a036b7125/" target="_blank" title="Ir a LinkedIn">
-                    <img class="facebook" src="./img/Linkedin.png" alt="Linkedin" width="40" height="40">
+                    <img class="linkedin" src="./img/Linkedin.png" alt="Linkedin">
                 </a>
                 <a href="https://github.com/JoseLuisEspinola" target="_blank" title="Ir a GitHub">
-                    <img class="facebook" src="./img/github1.png" alt="Github" width="40" height="40">
+                    <img class="github" src="./img/github1.png" alt="Github">
                 </a>
                 <a href="https://www.facebook.com/joseluis.espinola1" target="_blank" title="Ir a Facebook">
-                    <img class="facebook" src="./img/facebook.png" alt="Facebook" width="40" height="40">
+                    <img class="facebook" src="./img/facebook.png" alt="Facebook">
                 </a>
 <!--                 <a href="https://www.instagram.com/jle36/" target="_blank" title="Ir a Instagram">
-                    <img class="instagram" src="./img/instagram.png" alt="Instagram" width="40" height="40">
+                    <img class="instagram" src="./img/instagram.png" alt="Instagram">
                 </a>
                 <a href="https://x.com/jle36" target="_blank" title="Ir a Twitter">
-                    <img class="twitter" src="./img/Twitter.png" alt="Twitter" width="40" height="40">
+                    <img class="twitter" src="./img/Twitter.png" alt="Twitter">
                 </a> -->
                 <a href="https://api.whatsapp.com/send?phone=+543487616158&text=Hola, me gustaría realizar una página web... podrías contarme?" target="_blank" title="Ir a Whatsapp">
-                    <img class="whatsapp" src="./img/Whatsapp.png" alt="Whatsapp" width="40" height="40">
+                    <img class="whatsapp" src="./img/Whatsapp.png" alt="Whatsapp">
                 </a>
             </div>
 
