--- a/proyectos.html
+++ b/proyectos.html
@@ -55,6 +55,10 @@
                 <li class="li-proyectos"><a href="#cuebanita">Cuebanita</a></li>
             </ol>
         </div>
+
+        <a href="#" class="flecha-arriba">
+            <img src="./img/flecha1.png" alt="Flecha Arriba" title="Inicio">
+        </a>
     </section>
 
 
@@ -62,55 +66,55 @@
         <h2>CONFERENCIA BS AS</h2>
         <div class="card-container1">
             <div class="card1">
-                <img src="/img/oradores/orador1.jpg" alt="">
+                <img src="/img/oradores/orador1.jpg" alt="orador1">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador2.jpg" alt="">
+                <img src="/img/oradores/orador2.jpg" alt="orador2">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador3.jpg" alt="">
+                <img src="/img/oradores/orador3.jpg" alt="orador3">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador4.jpg" alt="">
+                <img src="/img/oradores/orador4.jpg" alt="orador4">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador5.jpg" alt="">
+                <img src="/img/oradores/orador5.jpg" alt="orador5">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador6.jpg" alt="">
+                <img src="/img/oradores/orador6.jpg" alt="orador6">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador7.jpg" alt="">
+                <img src="/img/oradores/orador7.jpg" alt="orador7">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador8.jpg" alt="">
+                <img src="/img/oradores/orador8.jpg" alt="orador8">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador9.jpg" alt="">
+                <img src="/img/oradores/orador9.jpg" alt="orador9">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador10.jpg" alt="">
+                <img src="/img/oradores/orador10.jpg" alt="orador10">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador11.jpg" alt="">
+                <img src="/img/oradores/orador11.jpg" alt="orador11">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador12.jpg" alt="">
+                <img src="/img/oradores/orador12.jpg" alt="orador12">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador13.jpg" alt="">
+                <img src="/img/oradores/orador13.jpg" alt="orador13">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador14.jpg" alt="">
+                <img src="/img/oradores/orador14.jpg" alt="orador14">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador15.jpg" alt="">
+                <img src="/img/oradores/orador15.jpg" alt="orador15">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador16.jpg" alt="">
+                <img src="/img/oradores/orador16.jpg" alt="orador16">
             </div>
             <div class="card1">
-                <img src="/img/oradores/orador17.jpg" alt="">
+                <img src="/img/oradores/orador17.jpg" alt="orador17">
             </div>
         </div>
     </section>
@@ -120,25 +124,25 @@
         <h2>PASTELERIA ELY</h2>
         <div class="card-container2">
             <div class="card2">
-                <img src="/img/pasteleria/pasteleria1.jpg" alt="">
+                <img src="/img/pasteleria/pasteleria1.jpg" alt="pasteleria1">
             </div>
             <div class="card2">
-                <img src="/img/pasteleria/pasteleria2.jpg" alt="">
+                <img src="/img/pasteleria/pasteleria2.jpg" alt="pasteleria2">
             </div>
             <div class="card2">
-                <img src="/img/pasteleria/pasteleria3.jpg" alt="">
+                <img src="/img/pasteleria/pasteleria3.jpg" alt="pasteleria3">
             </div>
             <div class="card2">
-                <img src="/img/pasteleria/pasteleria4.jpg" alt="">
+                <img src="/img/pasteleria/pasteleria4.jpg" alt="pasteleria4">
             </div>
             <div class="card2">
-                <img src="/img/pasteleria/pasteleria5.jpg" alt="">
+                <img src="/img/pasteleria/pasteleria5.jpg" alt="pasteleria5">
             </div>
             <div class="card2">
-                <img src="/img/pasteleria/pasteleria6.jpg" alt="">
+                <img src="/img/pasteleria/pasteleria6.jpg" alt="pasteleria6">
             </div>
             <div class="card2">
-                <img src="/img/pasteleria/pasteleria7.jpg" alt="">
+                <img src="/img/pasteleria/pasteleria7.jpg" alt="pasteleria7">
             </div>
         </div>
     </section>
@@ -148,25 +152,25 @@
         <h2>CURSO DE PELUQUERIA</h2>
         <div class="card-container3">
             <div class="card3">
-                <img src="/img/peluqueria/peluqueria1.jpg" alt="">
+                <img src="/img/peluqueria/peluqueria1.jpg" alt="peluqueria1">
             </div>
             <div class="card3">
-                <img src="/img/peluqueria/peluqueria2.jpg" alt="">
+                <img src="/img/peluqueria/peluqueria2.jpg" alt="peluqueria2">
             </div>
             <div class="card3">
-                <img src="/img/peluqueria/peluqueria3.jpg" alt="">
+                <img src="/img/peluqueria/peluqueria3.jpg" alt="peluqueria3">
             </div>
             <div class="card3">
-                <img src="/img/peluqueria/peluqueria4.jpg" alt="">
+                <img src="/img/peluqueria/peluqueria4.jpg" alt="peluqueria4">
             </div>
             <div class="card3">
-                <img src="/img/peluqueria/peluqueria5.jpg" alt="">
+                <img src="/img/peluqueria/peluqueria5.jpg" alt="peluqueria5">
             </div>
             <div class="card3">
-                <img src="/img/peluqueria/peluqueria6.jpg" alt="">
+                <img src="/img/peluqueria/peluqueria6.jpg" alt="peluqueria6">
             </div>
             <div class="card3">
-                <img src="/img/peluqueria/peluqueria7.jpg" alt="">
+                <img src="/img/peluqueria/peluqueria7.jpg" alt="peluqueria7">
             </div>
         </div>
     </section>
@@ -176,25 +180,25 @@
         <h2>UBINET S.A.</h2>
         <div class="card-container4">
             <div class="card4">
-                <img src="/img/ubinetsa/ubinet1.jpg" alt="">
+                <img src="/img/ubinetsa/ubinet1.jpg" alt="ubinet1">
             </div>
             <div class="card4">
-                <img src="/img/ubinetsa/ubinet2.jpg" alt="">
+                <img src="/img/ubinetsa/ubinet2.jpg" alt="ubinet2">
             </div>
             <div class="card4">
-                <img src="/img/ubinetsa/ubinet3.jpg" alt="">
+                <img src="/img/ubinetsa/ubinet3.jpg" alt="ubinet3">
             </div>
             <div class="card4">
-                <img src="/img/ubinetsa/ubinet4.jpg" alt="">
+                <img src="/img/ubinetsa/ubinet4.jpg" alt="ubinet4">
             </div>
             <div class="card4">
-                <img src="/img/ubinetsa/ubinet5.jpg" alt="">
+                <img src="/img/ubinetsa/ubinet5.jpg" alt="ubinet5">
             </div>
             <div class="card4">
-                <img src="/img/ubinetsa/ubinet6.jpg" alt="">
+                <img src="/img/ubinetsa/ubinet6.jpg" alt="ubinet6">
             </div>
             <div class="card4">
-                <img src="/img/ubinetsa/ubinet7.jpg" alt="">
+                <img src="/img/ubinetsa/ubinet7.jpg" alt="ubinet7">
             </div>
         </div>
     </section>
@@ -204,43 +208,43 @@
         <h2>CUEBANITA</h2>
         <div class="card-container5">
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita1.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita1.jpg" alt="cuebanita1">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita2.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita2.jpg" alt="cuebanita2">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita3.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita3.jpg" alt="cuebanita3">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita4.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita4.jpg" alt="cuebanita4">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita5.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita5.jpg" alt="cuebanita5">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita6.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita6.jpg" alt="cuebanita6">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita7.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita7.jpg" alt="cuebanita7">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita8.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita8.jpg" alt="cuebanita8">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita9.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita9.jpg" alt="cuebanita9">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita10.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita10.jpg" alt="cuebanita10">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita11.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita11.jpg" alt="cuebanita11">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita12.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita12.jpg" alt="cuebanita12">
             </div>
             <div class="card5">
-                <img src="/img/cuebanita/cuebanita13.jpg" alt="">
+                <img src="/img/cuebanita/cuebanita13.jpg" alt="cuebanita13">
             </div>
         </div>
     </section>
@@ -274,7 +278,12 @@
                 </a>
             </div>
         </div>
-        <p class="copying">&copy; 2024 Portafolio - Todos los derechos reservados - Espinola Jose Luis</p>
+        <!-- <p class="copying">&copy; 2024 Portafolio - Todos los derechos reservados - Espinola Jose Luis</p> -->
+        <p class="copyright">&copy; <span id="copyright-year"></span> Portafolio - Todos los derechos reservados - Espinola José Luis</p>
+        <script>
+            const currentYear = new Date().getFullYear();
+            document.getElementById('copyright-year').textContent = currentYear;
+          </script>
     </footer>
 
 </body>
