--- a/index.html
+++ b/index.html
@@ -327,9 +327,15 @@
                     <img class="whatsapp" src="./img/Whatsapp.png" alt="Whatsapp">
                 </a>
             </div>
-
         </div>
-        <p class="copying">&copy; 2024 Portafolio - Todos los derechos reservados - Espinola Jose Luis</p>
+
+        <!-- <p class="copying">&copy; 2024 Portafolio - Todos los derechos reservados - Espinola Jose Luis</p> -->
+        <p class="copyright">&copy; <span id="copyright-year"></span> Portafolio - Todos los derechos reservados - Espinola José Luis</p>
+        <script>
+            const currentYear = new Date().getFullYear();
+            document.getElementById('copyright-year').textContent = currentYear;
+          </script>
+
     </footer>
 
 </body>
