--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-
+    <!-- Lenguajes - Tecnologias -->
     <section id="container-slider">
         <h2>Tecnologias adquiridas</h2>
         <div class="slider">
@@ -294,7 +294,10 @@
             <input type="tel" name="Telefono" placeholder="Telefono" pattern="[a-zA-Z0-9' ]*" required>
             <input class="email" type="email" name="email" placeholder="Correo" minlength="8" required>
             <textarea name="mensaje" placeholder="Escriba aqui su mensaje" minlength="8" required></textarea>
-            
+            <div class="aceptar">
+                <input type="checkbox" id="check-priv" required>
+                <label for="check-priv" class="text-priv">Acepto se envíen mis datos</label>
+            </div>
             <input type="submit" id="boton" title="Clic para enviar el mail" value="ENVIAR">
         </form>
     </section>
