--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
             <div class="card-certificad">
                 <div class="title-certificad">
-                    <h3>Especialización Unity</h3>
+                    <h3>Video Juegos Unity</h3>
                 </div>
                 <div class="img-certificad">
                     <img src="/img/icon_unity_certificado.png" alt="Unity">
@@ -213,8 +213,23 @@
                     <a href="https://drive.google.com/file/d/1O6bOgkO-Pp_QFtZ6tu5SP9ywZAj4XYbe/view?usp=sharing" target="_blank">VER</a>
                 </div>
             </div>
+        </div>   <!-- Container-certificad -->
 
-        </div>
+        <!-- Link de descarga -->
+         <div class="container-download">
+            <h3>Link de descarga</h3>
+            <div class="button-download">
+                <a href="https://www.oracle.com/ar/java/technologies/downloads/" target="_blank">
+                    <img class="img1" src="/img/Descarga_Java_removebg.png" alt="Java download">
+                </a>
+                <a href="https://www.python.org/downloads/" target="_blank">
+                    <img class="img2" src="/img/Descarga_Python-removebg.png" alt="Python download">
+                </a>
+                <a href="https://unity.com/es/products" target="_blank">
+                    <img class="img3" src="/img/Descarga_Unity_removebg.png" alt="Unity download">
+                </a>
+            </div>
+         </div>
     </section>    
 
 
