--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         <!-- Link de descarga -->
          <div class="container-download">
-            <h3>Link de descarga</h3>
+            <h3>LINK DE DESCARGA</h3>
             <div class="button-download">
                 <a href="https://www.oracle.com/ar/java/technologies/downloads/" target="_blank">
                     <img class="img1" src="/img/Descarga_Java_removebg.png" alt="Java download">
