--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
             <h2>Sobre mí</h2>
             <div class="sobremi-content">
                 <img src="./img/telegram_logo.png" alt="Foto de perfil">
-                <p class="historiamia">¡Hola!, soy un apasionado desarrollador Full Stack con experiencia tanto en diseño web 
-                    como en programación. Mi formación incluye estudios en Ingeniería de Sistemas (hasta 3er año), donde adquirí 
+                <!-- &lt; palabra &gt; -->
+                <p class="historiamia">¡Hola!..., mi nombre es José Luis Espinola y soy un apasionado por la Informática
+                    y la programación. Mi formación incluye estudios en Ingeniería de Sistemas (hasta 3er año), donde adquirí 
                     conocimientos de diversos lenguajes de programación como Turbo Pascal, RmCobol y Visual FoxPro 9, este último 
                     del cual continúo manteniéndome actualizado en la actualidad.</p>
                 <p class="actualidad">Actualmente, me estoy especializando en el desarrollo web Full Stack, trabajando con 
-                    tecnologías como HTML, CSS, Bootstrap, JavaScript, Java, Python, C#, MySQL y Postgresql. Me encanta explorar nuevas herramientas 
-                    y tecnologías para mejorar mis habilidades y ofrecer soluciones innovadoras a los desafíos de desarrollo web.</p>
+                    tecnologías como HTML, CSS, Bootstrap, JavaScript, Java, Python, C#, MySQL y Postgresql. Me encanta explorar 
+                    nuevas herramientas y tecnologías para mejorar mis habilidades y ofrecer soluciones innovadoras a los desafíos 
+                    de desarrollo web.</p>
                 <!-- <p><font face="Avengeance" size="10">ADVENGERS</font></p>  ejemplo para usar la letra de ADVENGERS -->
             </div>
         </div>
