--- a/proyectos.html
+++ b/proyectos.html
@@ -145,6 +145,9 @@
             <div class="card2">
                 <img src="/img/pasteleria/pasteleria7.jpg" alt="pasteleria7">
             </div>
+            <div class="card2">
+                <img src="/img/pasteleria/pasteleria8.jpg" alt="pasteleria7">
+            </div>
         </div>
     </section>
 
