Actualizando el responsive

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         <p class="contac">Contacto</p>
         <div class="container">
             <p class="mimail">
-                <a href="mailto:tucorreo@example.com?subject=Consulta&body=Hola%2C%20quisiera%20más%20información%20sobre%20...">jle36@hotmail.com</a>
+                <a href="mailto:jle36@hotmail.com?subject=Consulta&body=Hola%2C%20quisiera%20más%20información%20sobre%20...">jle36@hotmail.com</a>
                 - Cel. +54-3487-616158
             </p>
             <div class="sociales">
